# anno

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  README_preview_analysis.txt  SECURITY.md  audit.toml  clippy.toml  datasets_generated.json  datasets_generated.jsonl  debug_entities  deny.toml  diag_memory.py  docker-compose.yml  env.example  justfile  phase5_memory_layer.py  phase6_claude_desktop_integration.py  runctl.toml  runctl.toml.example  rust-toolchain.toml  ty.toml
anno/: Cargo.toml  build.rs  env.rs  error.rs  lang.rs  pagerank.rs  summarize.rs  sync.rs  temporal.rs
anno-core/: Cargo.toml
anno-core/src/: calibration.rs  coref.rs  dataset.rs  entity.rs  error.rs  graph.rs  grounded.rs  historical.rs  label_prompt.rs  lib.rs  ontology.rs  provenance.rs  provisional.rs
anno-core/tests/: identity_tests.rs  property_tests.rs
anno-derive/: Cargo.toml
anno-derive/tests/: derive_tests.rs
anno-eval/: Cargo.toml
anno-eval/src/: abstract_anaphora.rs  advanced_evaluator.rs  advanced_harness.rs  analysis.rs  annotator.rs  backend_eval.rs  backend_factory.rs  benchmark.rs  bias_config.rs  bio_adapter.rs  book_scale.rs  cdcr.rs  cognitive_errors.rs  config_builder.rs  coref.rs  coref_metrics.rs  coref_resolver.rs  cross_context_eval.rs  dataset_comparison.rs  datasets.rs  demographic_bias.rs  evaluator.rs  evidence_eval.rs  gender_bias.rs  incremental_coref.rs  inter_doc_coref.rs  joint.rs  length_bias.rs  lib.rs  literary_coref.rs  loader.rs  long_tail.rs  low_resource.rs  metrics.rs  modes.rs  multi_run.rs  ner_metrics.rs  ood_detection.rs  prelude.rs  property_tests.rs  (+11 more)
anno-models/: Cargo.toml
anno-models/src/: burn.rs  candle.rs  runtime.rs
anno-rel/: Cargo.toml
anno-rel/src/: eval.rs  lib.rs  types.rs
anno-strata/: Cargo.toml
anno-strata/src/: centrality.rs  graph_utils.rs  label_propagation.rs  leiden.rs  lib.rs  louvain.rs  pagerank.rs  raptor.rs
anno-strata/tests/: algorithm_comparison.rs  centrality_integration.rs  e2e_pipeline.rs  full_pipeline_integration.rs  graph_utils_integration.rs  hierarchical_tests.rs  property_tests.proptest-regressions  property_tests.rs
anno-tier/: Cargo.toml
anno-tier/src/: centrality.rs  label_propagation.rs  louvain.rs  pagerank.rs
anno-tier/tests/: e2e_pipeline.rs  hierarchical_tests.rs
anno-traits/: Cargo.toml
anno/backends/: async_adapter.rs  bilstm_crf.rs  box_embeddings.rs  candle.rs  catalog.rs  crf.rs  ensemble.rs  gliner2.rs  hmm.rs  inference.rs  label_prompt.rs  llm_client.rs  llm_prompt.rs  nuner.rs  onnx.rs  regex.rs  semantic_chunking.rs  session_pool.rs  streaming.rs  tplinker.rs  universal_ner.rs
anno/benches/: offset_operations.rs
anno/cli/: exit_codes.rs  mod.rs  output.rs  parser.rs
anno/discourse/: dialogue.rs  types.rs  uncertain_reference.rs
anno/eval/: abstract_anaphora.rs  backend_eval.rs  backend_factory.rs  backend_name.rs  benchmark.rs  calibration.rs  cdcr.rs  cognitive_errors.rs  config_builder.rs  dataset_comparison.rs  dataset_metadata.rs  demographic_bias.rs  discontinuous.rs  discourse_deixis.rs  drift.rs  ensemble.rs  few_shot.rs  harness.rs  incremental_coref.rs  joint.rs  learning_curve.rs  literary_coref.rs  maverick_coref.rs  mod.rs  modes.rs  prelude.rs  property_tests.rs  robustness.rs  sampling.rs  schema.rs  shell_nouns.rs  similarity.rs  synthetic_gen.rs  threshold_analysis.rs  unified_evaluator.rs  viewpoint.rs
anno/examples/: adaptive_resolution.rs  bert.rs  cache_warm.rs  eval.rs  eval_basic.rs  eval_history_demo.rs  export_coref_for_box_training.rs  gradient_check.rs  grounded.rs  joint_training_experiment.rs  joint_training_from_dataset.rs  models.rs
anno/ingest/: mod.rs  url_resolver.rs
anno/joint/: learning.rs  mod.rs
anno/linking/: candidate.rs  kb.rs  linker.rs  mod.rs
anno/preprocess/: apposition.rs  mod.rs  morphology.rs
anno/src/: edit_distance.rs  env.rs  features.rs  keywords.rs  lang.rs  lib.rs  offset.rs  salience.rs  summarize.rs  sync.rs  temporal.rs  tokenizer.rs
anno/tests/: alignment_kilogram_integration.rs  backend_integration.rs  backend_llm.rs  backend_provenance_contracts.rs  calibration_proptests.rs  cli_context_output.rs  combiner_variance.rs  compare_command.rs  coref_pipeline_integration.rs  coreference_tests.rs  dataset_command_cli.rs  dataset_loading.rs  dataset_parsing_validation.rs  dataset_subcommands_e2e.rs  dataset_toml_sync.rs  discontinuous_entity_tests.rs  discourse_proptest.rs  e2e_advanced_scenarios.rs  e2e_backend_scenarios.rs  e2e_cli_workflows.rs  e2e_dataset_pipeline.rs  e2e_error_recovery.rs  e2e_full_pipeline.rs  e2e_serialization_roundtrip.rs  e2e_unicode_internationalization.rs  features_comprehensive.rs  gliner_backend_init_test.rs  graph_coref_integration.rs  graph_coref_property.rs  hierarchical_confidence_tests.rs  human_voice_agent_dataset.rs  human_voice_agent_schema.rs  integration_corpus_management.rs  integration_output_formatting.rs  integration_similarity_edge_cases.rs  integration_track_merging.rs  joint_integration.rs  mention_ranking_property.rs  metal_contiguous.rs  multilingual_diversity.rs  (+16 more)
archive/anno-cli-merged-2024-12/: Cargo.toml
crates/anno-cli/: Cargo.toml
crates/anno-coalesce/: Cargo.toml
crates/anno-core/: Cargo.toml  README.md
crates/anno-corpus-core/: Cargo.toml
crates/anno-corpus-store/: Cargo.toml
crates/anno-eval/: Cargo.toml  muxer_decisions.jsonl
crates/anno-graph/: Cargo.toml
crates/anno-knowledge-core/: Cargo.toml
crates/anno-knowledge-store/: Cargo.toml
crates/anno-lattix/: Cargo.toml
crates/anno-metrics/: Cargo.toml  README.md
crates/anno-privacy-gateway/: CHANGELOG.md  Cargo.toml
crates/anno-rag/: CHANGELOG.md  Cargo.toml  README.md  config-schema.json  config.toml.example
crates/anno-rag-bin/: Cargo.toml
crates/anno-rag-mcp/: Cargo.toml
crates/anno-rag-setup/: Cargo.toml  tauri.conf.json
crates/anno-rag-tabular/: Cargo.toml
(+2316 files in other folders)
