[workspace]
# Workspace Architecture
# ======================
#
# Pipeline:
#   Text → Extract → Coalesce → Export
#          (anno)   (anno-core)
#
members = [
  "crates/anno",
  "crates/anno-core",
  "crates/anno-eval",
  "crates/anno-cli",
  "crates/anno-graph",
  "crates/anno-metrics",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/anno"
homepage = "https://docs.rs/anno"
documentation = "https://docs.rs/anno"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
bitflags = "2"

# `textprep` is published on crates.io. For local development with sibling checkouts,
# merge `.cargo/config.toml.example` into your `.cargo/config.toml` to patch it to a path dependency.
textprep = "0.1"
clump = "0.5"
innr = "0.2"

## Clustering / stratification
#
# Hierarchical clustering has been archived out of this workspace (see `archive/anno-tier/`).

# CLI dependencies
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
is-terminal = "0.4"
glob = "0.3"
indicatif = "0.17"
toml = "0.8"

# Evaluation
rand = "0.9"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
dirs = "5"

# ML backends (not optional in workspace - individual crates can make them optional)
# TODO: upgrade to stable ort 2.0 when released (still RC as of 2026-03)
ort = "=2.0.0-rc.12"
tokenizers = "0.22"
hf-hub = "0.4"
ndarray = "0.16"
lru = "0.16"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
safetensors = "0.4"

# Document-to-text extraction
deformat = "0.6"

# Performance
rayon = "1"

# Utilities
itertools = "0.14"
unicode-normalization = "0.1.25"
rusqlite = { version = "0.37", features = ["bundled"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Local development: see .cargo/config.toml.example for path overrides

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"

[package]
name = "anno"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = "NER, coreference resolution, relation extraction, PII detection, and zero-shot entity types"
readme = "README.md"
keywords = ["ner", "nlp", "extraction", "coreference", "zero-shot"]
categories = ["text-processing"]
include = [
  "/src/**/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE",
  "/LICENSE-*",
  "/README.md",
]

[lib]
doc = false

[dependencies]
anno-lib = { path = "crates/anno", package = "anno-lib", version = "0.7.0", default-features = false }
serde_json = { workspace = true }

[features]
default = ["onnx"]

# Keep the facade surface intentionally small: expose stable capability toggles,
# not every internal wiring switch from `anno-lib`.
analysis = ["anno-lib/analysis"]
schema = ["anno-lib/schema"]
onnx = ["anno-lib/onnx"]
candle = ["anno-lib/candle"]
discourse = ["anno-lib/discourse"]
metal = ["anno-lib/metal"]
cuda = ["anno-lib/cuda"]
llm = ["anno-lib/llm"]
production = ["anno-lib/production"]
bundled-crf-weights = ["anno-lib/bundled-crf-weights"]
bundled-hmm-params = ["anno-lib/bundled-hmm-params"]

# Local development overrides (path patches) live in `.cargo/config.toml`.
# See `.cargo/config.toml.example` for the super-workspace setup.
