[workspace]
# Workspace Architecture
# ======================
#
# Pipeline: Text -> Extract -> Coalesce -> Export, all in `anno`. Phase B
# (2026-04-26) folded anno-core, anno-metrics, and anno-graph into the main
# `anno` crate. anno-eval and anno-cli stay separate.
#
members = ["crates/anno", "crates/anno-eval", "crates/anno-cli", "crates/anno-rag"]
exclude = ["vendor"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/anno"
homepage = "https://docs.rs/anno"
documentation = "https://docs.rs/anno"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
bitflags = "2"

# `textprep` is published on crates.io. For local development with sibling checkouts,
# merge `.cargo/config.toml.example` into your `.cargo/config.toml` to patch it to a path dependency.
textprep = "0.1"
clump = "0.5"
innr = "0.2"

## Clustering / stratification
#
# Hierarchical clustering has been archived out of this workspace (see `archive/anno-tier/`).

# CLI dependencies
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
is-terminal = "0.4"
glob = "0.3"
indicatif = "0.17"
toml = "0.8"

# Evaluation
rand = "0.9"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
dirs = "5"

# ML backends (not optional in workspace - individual crates can make them optional)
# TODO: upgrade to stable ort 2.0 when released (still RC as of 2026-03)
ort = "=2.0.0-rc.12"
tokenizers = "0.22"
hf-hub = "0.4"
ndarray = "0.16"
lru = "0.16"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
safetensors = "0.4"

# Document-to-text extraction
deformat = "0.15"

# Performance
rayon = "1"

# Utilities
half = "2"
itertools = "0.14"
unicode-normalization = "0.1.25"
rusqlite = { version = "0.37", features = ["bundled"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# anno-rag (v0.1 walking skeleton) — new deps not already in workspace
kreuzberg       = { version = "=4.9.7", default-features = false, features = ["pdf", "ocr", "office", "html", "tokio-runtime"] }
lancedb         = "=0.27.2"
arrow           = "=58"
arrow-array     = "=58"
arrow-schema    = "=58"
tokio           = { version = "1.51", features = ["full"] }
anyhow          = "1"
uuid            = { version = "1", features = ["v7", "serde"] }
walkdir         = "2"
futures         = "0.3"
argon2          = "0.5"
keyring         = "3"

# Local development: see .cargo/config.toml.example for path overrides

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"

# This is a virtual workspace. The published `anno` crate lives at `crates/anno/`.
# Local development overrides (path patches) live in `.cargo/config.toml`.
# See `.cargo/config.toml.example` for the super-workspace setup.
