[package]
name = "anno-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types for anno: Entity, Span, GroundedDocument, Track, Identity, GraphDocument"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

