[package]
name = "anno-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Convenience re-export of anno's evaluation framework"
publish = false  # Not published to crates.io

# This crate is a thin wrapper that re-exports anno::eval
# All actual implementation lives in anno/src/eval/

[dependencies]
# Re-export anno with eval feature enabled
anno = { path = "../anno", default-features = false, features = ["eval"] }
anno-core = { path = "../anno-core" }

[features]
default = []

# Forward features to anno
eval = ["anno/eval"]
eval-bias = ["anno/eval-bias"]
eval-advanced = ["anno/eval-advanced"]
eval-full = ["anno/eval-full"]
eval-parallel = ["anno/eval-parallel"]
eval-profiling = ["anno/eval-profiling"]
discourse = ["anno/discourse"]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
