[package]
name = "anno-strata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Hierarchical clustering - reveal strata of abstraction (Leiden, RAPTOR, etc.). Extract. Coalesce. Stratify."
publish = false  # Publishing disabled

[dependencies]
anno-core = { path = "../anno-core" }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
rayon = { workspace = true, optional = true }

# Hierarchical abstraction algorithms
stratify = { path = "../../stratify", optional = true }

[features]
default = []
parallel = ["rayon"]
raptor = ["stratify"]

[dev-dependencies]
proptest = "1.0"
rand = { workspace = true }

[lints]
workspace = true

