[package]
name = "anno-tier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Hierarchical clustering - reveal tiers of abstraction (Leiden, RAPTOR, etc.). Extract. Coalesce. Tierify."
publish = false  # Publishing disabled

[dependencies]
anno-core = { path = "../anno-core" }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
rayon = { workspace = true, optional = true }

# Hierarchical abstraction algorithms
# `tier` is defined at the workspace level:
# - in the standalone `anno` workspace: via git (see `anno/Cargo.toml`)
# - in the super-workspace: via `workspace.dependencies` + local path
tier = { workspace = true, optional = true, features = ["cluster", "community", "parallel"] }

[features]
default = []
parallel = ["rayon"]
raptor = ["tier"]

[dev-dependencies]
proptest = "1.0"
rand = { workspace = true }

[lints]
workspace = true

