[package]
name = "anno-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core traits for anno NLP toolkit: Model, CoreferenceResolver, etc."
publish = false

[dependencies]
anno-core = { path = "../anno-core" }

[lints]
workspace = true
