[package]
name = "anno"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified API for NER, coreference resolution, and evaluation in Rust"
keywords = ["ner", "nlp", "entity", "extraction", "coreference", "evaluation"]
categories = ["text-processing", "science"]
readme = "../README.md"

[dependencies]
anno-core = { path = "../anno-core" }
anno-coalesce = { path = "../anno-coalesce" }
anno-strata = { path = "../anno-strata", optional = true }
# NOTE: anno-eval is a separate crate that depends on anno, not the other way around
# The eval features in anno are self-contained
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }

# Evaluation
rand = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# ML backends
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }

# Burn ML framework
burn = { workspace = true, optional = true }
burn-ndarray = { workspace = true, optional = true }
burn-tch = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
burn-autodiff = { workspace = true, optional = true }

# Async
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Utilities
itertools = { workspace = true }
smallvec = { workspace = true }

# Geometric foundations (optional)
# NOTE: subsume-core is a separate repo at ../subsume. The trait impl in
# box_embeddings.rs is ready but this dep is disabled until subsume is stable.
# To enable: uncomment and ensure ../subsume exists
# subsume-core = { path = "../../subsume/subsume-core", optional = true }

# Observability
tracing = { workspace = true, optional = true }

# CLI dependencies (optional)
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "is-terminal", "indicatif", "toml"]
eval = ["dirs", "glob"]
eval-bias = ["eval"]
eval-advanced = ["eval", "rand", "ureq", "sha2", "anno-strata"]
eval-full = ["eval", "eval-bias", "eval-advanced"]
eval-parallel = ["eval", "rayon"]
eval-profiling = ["eval"]
discourse = ["eval"]
onnx = ["ort", "tokenizers", "hf-hub", "ndarray", "lru"]
candle = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "safetensors"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Burn ML framework (training + inference, portable backends)
burn = ["dep:burn", "burn-ndarray", "burn-autodiff", "tokenizers", "hf-hub", "safetensors"]
burn-gpu = ["burn", "burn-wgpu"]
burn-torch = ["burn", "burn-tch"]
async-inference = ["tokio", "futures", "onnx"]
session-pool = ["crossbeam-channel", "onnx"]
fast-lock = ["parking_lot"]
# Observability
instrument = ["tracing"]
full = ["eval-full", "onnx", "candle", "discourse"]
production = ["onnx", "async-inference", "session-pool", "fast-lock"]
# Geometric foundations from subsume library
# NOTE: subsume feature is defined but dep is disabled. To enable:
# 1. Uncomment subsume-core dependency above
# 2. Change this line to: subsume = ["dep:subsume-core"]
subsume = []
# Future: External ranking metrics library (not yet published)
# Change to: rank-eval = ["dep:rank_eval"] when available
rank-eval = []
# Future: Jiff temporal library integration
# Change to: jiff-time = ["dep:jiff"] when available
jiff-time = []

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[[bench]]
name = "offset_operations"
harness = false

[lints]
workspace = true
