[package]
name = "anno"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Unified API for NER, coreference resolution, and evaluation in Rust"
keywords = ["ner", "nlp", "entity", "extraction", "coreference", "evaluation"]
categories = ["text-processing", "science"]
readme = "../README.md"

[dependencies]
anno-core = { path = "../anno-core" }
anno-coalesce = { path = "../anno-coalesce" }
anno-strata = { path = "../anno-strata", optional = true }
# NOTE: anno-eval is a separate crate that depends on anno, not the other way around
# The eval features in anno are self-contained
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }

# Evaluation
rand = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# ML backends
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }

# Burn ML framework
burn = { workspace = true, optional = true }
burn-ndarray = { workspace = true, optional = true }
burn-tch = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
burn-autodiff = { workspace = true, optional = true }

# Async
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Utilities
itertools = { workspace = true }
smallvec = { workspace = true }
unicode-normalization = { workspace = true, optional = true }

# Geometric foundations (optional)
# NOTE: subsume-core is a separate repo at ../subsume. The trait impl in
# box_embeddings.rs is ready but this dep is disabled until subsume is stable.
# To enable: uncomment and ensure ../subsume exists
# subsume-core = { path = "../../subsume/subsume-core", optional = true }

# Observability
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# CLI dependencies (optional)
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[features]
# Default includes cli + eval so `cargo install anno` works
default = ["cli", "eval"]
cli = ["clap", "clap_complete", "is-terminal", "indicatif", "toml", "xxhash-rust"]
eval = ["dirs", "glob"]
eval-bias = ["eval"]
llm = ["dep:ureq"]
eval-advanced = ["eval", "rand", "sha2", "anno-strata", "llm", "unicode-normalization"]
eval-full = ["eval", "eval-bias", "eval-advanced"]
eval-parallel = ["eval", "rayon"]
eval-profiling = ["eval"]
discourse = ["eval"]
onnx = ["ort", "tokenizers", "hf-hub", "ndarray", "lru"]
candle = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "safetensors"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Burn ML framework (training + inference, portable backends)
burn = ["dep:burn", "burn-ndarray", "burn-autodiff", "tokenizers", "hf-hub", "safetensors"]
burn-gpu = ["burn", "burn-wgpu"]
burn-torch = ["burn", "burn-tch"]
async-inference = ["tokio", "futures", "onnx"]
session-pool = ["crossbeam-channel", "onnx"]
fast-lock = ["parking_lot"]
# Observability
instrument = ["tracing", "tracing-subscriber"]
full = ["eval-full", "onnx", "candle", "discourse"]
production = ["onnx", "async-inference", "session-pool", "fast-lock"]
# Geometric foundations from subsume library
# NOTE: subsume feature is defined but dep is disabled. To enable:
# 1. Uncomment subsume-core dependency above
# 2. Change this line to: subsume = ["dep:subsume-core"]
subsume = []
# Future: External ranking metrics library (not yet published)
# Change to: rank-eval = ["dep:rank_eval"] when available
rank-eval = []
# Future: Jiff temporal library integration
# Change to: jiff-time = ["dep:jiff"] when available
jiff-time = []

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
bstr = "1"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "offset_operations"
harness = false

[[bin]]
name = "anno"
path = "src/bin/anno.rs"
required-features = ["cli", "eval"]

# NOTE: Workspace-root integration tests live in `../tests/*.rs`.
# Because the workspace root is a *virtual manifest* (no `[package]`), those
# tests are not test targets of any Cargo package unless we wire them in
# explicitly. We keep them in the workspace root for organization, but attach
# them here so they actually compile and run under `cargo test -p anno ...`.
#
# This preserves the existing workspace layout while preventing “tests that
# never run”.
[[test]]
name = "active_learning_integration"
path = "../tests/active_learning_integration.rs"

[[test]]
name = "advanced_trait_tests"
path = "../tests/advanced_trait_tests.rs"

[[test]]
name = "african_language_datasets"
path = "../tests/african_language_datasets.rs"

[[test]]
name = "auto_backend_tests"
path = "../tests/auto_backend_tests.rs"

[[test]]
name = "backend_candle"
path = "../tests/backend_candle.rs"

[[test]]
name = "backend_comparison"
path = "../tests/backend_comparison.rs"

[[test]]
name = "backend_nuner_w2ner"
path = "../tests/backend_nuner_w2ner.rs"

[[test]]
name = "bounds_validation"
path = "../tests/bounds_validation.rs"

[[test]]
name = "box_embeddings_thread_safety"
path = "../tests/box_embeddings_thread_safety.rs"

[[test]]
name = "bug_fixes"
path = "../tests/bug_fixes.rs"

[[test]]
name = "cli_ingest_features"
path = "../tests/cli_ingest_features.rs"

[[test]]
name = "cli_integration"
path = "../tests/cli_integration.rs"

[[test]]
name = "cli_new_commands"
path = "../tests/cli_new_commands.rs"

[[test]]
name = "cli_ux_fixes"
path = "../tests/cli_ux_fixes.rs"

[[test]]
name = "comprehensive_ner_tests"
path = "../tests/comprehensive_ner_tests.rs"

[[test]]
name = "concurrency_tests"
path = "../tests/concurrency_tests.rs"

[[test]]
name = "conversion_e2e"
path = "../tests/conversion_e2e.rs"

[[test]]
name = "coref_integration"
path = "../tests/coref_integration.rs"

[[test]]
name = "corpus_performance"
path = "../tests/corpus_performance.rs"

[[test]]
name = "corpus_proptest"
path = "../tests/corpus_proptest.rs"

[[test]]
name = "corpus_tests"
path = "../tests/corpus_tests.rs"

[[test]]
name = "crossdoc_cli"
path = "../tests/crossdoc_cli.rs"

[[test]]
name = "crossdoc_cli_e2e"
path = "../tests/crossdoc_cli_e2e.rs"

[[test]]
name = "crossdoc_cli_exec"
path = "../tests/crossdoc_cli_exec.rs"

[[test]]
name = "crossdoc_cli_format"
path = "../tests/crossdoc_cli_format.rs"

[[test]]
name = "crossdoc_cli_integration"
path = "../tests/crossdoc_cli_integration.rs"

[[test]]
name = "crossdoc_cli_output"
path = "../tests/crossdoc_cli_output.rs"

[[test]]
name = "crossdoc_cli_proptest"
path = "../tests/crossdoc_cli_proptest.rs"

[[test]]
name = "die_hard"
path = "../tests/die_hard.rs"

[[test]]
name = "discontinuous_span_tests"
path = "../tests/discontinuous_span_tests.rs"

[[test]]
name = "discourse_comprehensive"
path = "../tests/discourse_comprehensive.rs"

[[test]]
name = "domain_specific"
path = "../tests/domain_specific.rs"

[[test]]
name = "e2e_quality_comprehensive"
path = "../tests/e2e_quality_comprehensive.rs"

[[test]]
name = "edge_cases"
path = "../tests/edge_cases.rs"

[[test]]
name = "edit_distance_integration"
path = "../tests/edit_distance_integration.rs"

[[test]]
name = "entity_builder_fuzz_tests"
path = "../tests/entity_builder_fuzz_tests.rs"

[[test]]
name = "entity_builder_fuzz_tests_minimal"
path = "../tests/entity_builder_fuzz_tests_minimal.rs"

[[test]]
name = "entity_validation_fuzz_tests"
path = "../tests/entity_validation_fuzz_tests.rs"

[[test]]
name = "eval_backend_caching"
path = "../tests/eval_backend_caching.rs"

[[test]]
name = "eval_improvements_tests"
path = "../tests/eval_improvements_tests.rs"

[[test]]
name = "eval_invariants"
path = "../tests/eval_invariants.rs"

[[test]]
name = "eval_label_mapping"
path = "../tests/eval_label_mapping.rs"

[[test]]
name = "eval_progress_reporting"
path = "../tests/eval_progress_reporting.rs"

[[test]]
name = "eval_proptest"
path = "../tests/eval_proptest.rs"

[[test]]
name = "eval_subtle_bugs"
path = "../tests/eval_subtle_bugs.rs"

[[test]]
name = "evaluator_duplicate_fix_test"
path = "../tests/evaluator_duplicate_fix_test.rs"

[[test]]
name = "evaluator_tests"
path = "../tests/evaluator_tests.rs"

[[test]]
name = "fuzz_edge_cases"
path = "../tests/fuzz_edge_cases.rs"

[[test]]
name = "fuzz_strategies"
path = "../tests/fuzz_strategies.rs"

[[test]]
name = "gliner1_tests"
path = "../tests/gliner1_tests.rs"

[[test]]
name = "gliner2_tests"
path = "../tests/gliner2_tests.rs"

[[test]]
name = "gliner_candle_bug_tests"
path = "../tests/gliner_candle_bug_tests.rs"

[[test]]
name = "gliner_optimization_invariants"
path = "../tests/gliner_optimization_invariants.rs"

[[test]]
name = "graph_export_tests"
path = "../tests/graph_export_tests.rs"

[[test]]
name = "graph_fuzz_tests"
path = "../tests/graph_fuzz_tests.rs"

[[test]]
name = "graph_fuzz_tests_minimal"
path = "../tests/graph_fuzz_tests_minimal.rs"

[[test]]
name = "grounded_fuzz_tests"
path = "../tests/grounded_fuzz_tests.rs"

[[test]]
name = "grounded_fuzz_tests_minimal"
path = "../tests/grounded_fuzz_tests_minimal.rs"

[[test]]
name = "grounded_multimodal"
path = "../tests/grounded_multimodal.rs"

[[test]]
name = "heuristic_optimization_invariants"
path = "../tests/heuristic_optimization_invariants.rs"

[[test]]
name = "historical_methods_comparison"
path = "../tests/historical_methods_comparison.rs"

[[test]]
name = "inference_tests"
path = "../tests/inference_tests.rs"

[[test]]
name = "integration"
path = "../tests/integration.rs"

[[test]]
name = "integration_comprehensive"
path = "../tests/integration_comprehensive.rs"

[[test]]
name = "integration_eval"
path = "../tests/integration_eval.rs"

[[test]]
name = "integration_full_pipeline"
path = "../tests/integration_full_pipeline.rs"

[[test]]
name = "integration_ml_stacked"
path = "../tests/integration_ml_stacked.rs"

[[test]]
name = "invariant_tests"
path = "../tests/invariant_tests.rs"

[[test]]
name = "lang_detection_fuzz_tests"
path = "../tests/lang_detection_fuzz_tests.rs"

[[test]]
name = "lang_detection_tests"
path = "../tests/lang_detection_tests.rs"

[[test]]
name = "layered_ner_comprehensive"
path = "../tests/layered_ner_comprehensive.rs"

[[test]]
name = "mock_model_tests"
path = "../tests/mock_model_tests.rs"

[[test]]
name = "multilingual_ner_tests"
path = "../tests/multilingual_ner_tests.rs"

[[test]]
name = "ner_comprehensive"
path = "../tests/ner_comprehensive.rs"

[[test]]
name = "ner_nuances"
path = "../tests/ner_nuances.rs"

[[test]]
name = "ner_tests"
path = "../tests/ner_tests.rs"

[[test]]
name = "new_features_integration"
path = "../tests/new_features_integration.rs"

[[test]]
name = "nuner_label_packs"
path = "../tests/nuner_label_packs.rs"

[[test]]
name = "nuner_onnx_smoke"
path = "../tests/nuner_onnx_smoke.rs"

[[test]]
name = "nuner_span_decode"
path = "../tests/nuner_span_decode.rs"

[[test]]
name = "offset_bug_tests"
path = "../tests/offset_bug_tests.rs"

[[test]]
name = "optimization_correctness"
path = "../tests/optimization_correctness.rs"

[[test]]
name = "optimization_invariants"
path = "../tests/optimization_invariants.rs"

[[test]]
name = "pattern_statistical_detailed"
path = "../tests/pattern_statistical_detailed.rs"

[[test]]
name = "performance_invariants"
path = "../tests/performance_invariants.rs"

[[test]]
name = "real_datasets"
path = "../tests/real_datasets.rs"

[[test]]
name = "regression_crossdoc_auto_tracks"
path = "../tests/regression_crossdoc_auto_tracks.rs"

[[test]]
name = "regression_crossdoc_type_mismatch"
path = "../tests/regression_crossdoc_type_mismatch.rs"

[[test]]
name = "regression_embedding_dimension_mismatch"
path = "../tests/regression_embedding_dimension_mismatch.rs"

[[test]]
name = "regression_f1"
path = "../tests/regression_f1.rs"

[[test]]
name = "regression_single_letter_false_positive"
path = "../tests/regression_single_letter_false_positive.rs"

[[test]]
name = "relation_extraction_quality"
path = "../tests/relation_extraction_quality.rs"

[[test]]
name = "schema_fuzz_tests"
path = "../tests/schema_fuzz_tests.rs"

[[test]]
name = "schema_fuzz_tests_minimal"
path = "../tests/schema_fuzz_tests_minimal.rs"

[[test]]
name = "schema_mapping_tests"
path = "../tests/schema_mapping_tests.rs"

[[test]]
name = "seqeval_comparison"
path = "../tests/seqeval_comparison.rs"

[[test]]
name = "serialization_fuzz_tests"
path = "../tests/serialization_fuzz_tests.rs"

[[test]]
name = "serialization_fuzz_tests_minimal"
path = "../tests/serialization_fuzz_tests_minimal.rs"

[[test]]
name = "serialization_tests"
path = "../tests/serialization_tests.rs"

[[test]]
name = "similarity_fuzz_tests"
path = "../tests/similarity_fuzz_tests.rs"

[[test]]
name = "slow_benchmarks"
path = "../tests/slow_benchmarks.rs"

[[test]]
name = "stacked_ml_composability"
path = "../tests/stacked_ml_composability.rs"

[[test]]
name = "stacked_ml_concurrency"
path = "../tests/stacked_ml_concurrency.rs"

[[test]]
name = "stacked_ml_error_paths"
path = "../tests/stacked_ml_error_paths.rs"

[[test]]
name = "stacked_ml_fuzz_tests"
path = "../tests/stacked_ml_fuzz_tests.rs"

[[test]]
name = "stacked_ml_real_datasets"
path = "../tests/stacked_ml_real_datasets.rs"

[[test]]
name = "stacked_ner_evaluation"
path = "../tests/stacked_ner_evaluation.rs"

[[test]]
name = "subtle_bugs_tests"
path = "../tests/subtle_bugs_tests.rs"

[[test]]
name = "sync_integration_tests"
path = "../tests/sync_integration_tests.rs"

[[test]]
name = "sync_proptest"
path = "../tests/sync_proptest.rs"

[[test]]
name = "synthetic_domain_minima"
path = "../tests/synthetic_domain_minima.rs"

[[test]]
name = "task_evaluator_comprehensive"
path = "../tests/task_evaluator_comprehensive.rs"

[[test]]
name = "thread_safety_tests"
path = "../tests/thread_safety_tests.rs"

[[test]]
name = "trait_harmonization_tests"
path = "../tests/trait_harmonization_tests.rs"

[[test]]
name = "trait_integration_tests"
path = "../tests/trait_integration_tests.rs"

[[test]]
name = "type_mapper_tests"
path = "../tests/type_mapper_tests.rs"

[[test]]
name = "w2ner_auth_tests"
path = "../tests/w2ner_auth_tests.rs"

[[test]]
name = "zero_shot_eval_tests"
path = "../tests/zero_shot_eval_tests.rs"

[lints]
workspace = true
